--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
+    "react-router-dom": "^6.21.1",
     "swiper": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "vite": "^4.2.0"
   }
 }
