--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
+    "esri-leaflet-geocoder": "2.3.3",
     "framer-motion": "^10.8.5",
+    "leaflet": "^1.9.4",
     "lodas": "^1.2.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -19,6 +21,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-leaflet": "4.2.1",
     "react-outside-click-handler": "^1.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "6.10.0",
